# miniptr

./: .gitignore  Cargo.toml  README.md
benches/: slab.rs
src/: generational.rs  index.rs  lib.rs  slab.rs  slot.rs
src/entity/: list.rs  mod.rs
src/pool/: container.rs  list.rs  mod.rs  slab.rs  slice.rs
src/pool/container/: array.rs  map.rs  mod.rs  stack.rs
src/pool/slab/: free.rs  mod.rs
src/pool/slice/: free.rs  mod.rs
